# configuration

./: .gitignore  readme.md
cmake/project/: CMakeLists.txt
cmake/project/A/: CMakeLists.txt
cmake/project/A/B/: CMakeLists.txt
cmake/project/A/B/src/: http.cpp  http.h
cmake/project/A/C/: CMakeLists.txt
cmake/project/A/C/src/: dao.cpp  dao.h
cmake/project/A/src/: view.cpp  view.h
cmake/project/src/: main.cpp
gradle/: build.gradle
make/: Makefile
make/MP3_player/: Makefile
make/MP3_player/app/player/: Makefile  main.c  player  player.c  player.h
make/MP3_player/lib/codec/: Makefile  codec  codec.c  codec.h  main.c
make/MP3_player/lib/db/: Makefile  db  db.c  db.h  main.c
make/MP3_player/lib/ui/: Makefile  main.c  ui  ui.c  ui.h
make/project/: Makefile  readme.txt
make/project/A/: Makefile  readme.txt
make/project/A/include/: controller.h
make/project/A/src/: controller.cpp
make/project/App/: Makefile  readme.txt
make/project/App/src/: main.cpp
make/project/B/: Makefile
make/project/B/include/: cal.h
make/project/B/src/: cal.cpp
make/project/C/: Makefile  readme.txt
make/project/C/include/: print.h
make/project/C/src/: print.cpp
